--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -6,7 +6,8 @@
   box-sizing: inherit;
 }
 
-html {
+html,
+body {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   overflow-x: hidden;
