--- a/source/sass/swiper-styles.scss
+++ b/source/sass/swiper-styles.scss
@@ -32,6 +32,13 @@
   background-image: url("../img/arrow-left.svg");
 }
 
+.swiper-button-next.swiper-button-disabled,
+.swiper-button-prev.swiper-button-disabled {
+  pointer-events: visible;
+  cursor: pointer;
+}
+
+
 @media (max-width: $tablet-width) {
   .swiper-button-next,
   .swiper-button-prev {
