--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -123,11 +123,11 @@
   }
 }
 
-.promo__image {
+.promo picture {
   height: 500px;
 }
 
-.promo__img {
+.promo img {
   max-width: 660px;
   height: 100%;
 }
@@ -195,11 +195,11 @@
     line-height: 24px;
   }
 
-  .promo__image {
+  .promo picture {
     height: 292px;
   }
 
-  .promo__img {
+  .promo img {
     max-width: 386px;
   }
 
@@ -246,11 +246,11 @@
     margin-bottom: 1px;
   }
 
-  .promo__image {
+  .promo picture {
     height: 292px;
   }
 
-  .promo__img {
+  .promo img {
     max-width: 290px;
     height: 100%;
   }
