--- a/source/sass/blocks/gym.scss
+++ b/source/sass/blocks/gym.scss
@@ -50,7 +50,7 @@
   padding-bottom: 110px;
 }
 
-.gym__img {
+.gym__image-box img {
   width: 100%;
   height: 100%;
   max-height: 401px;
@@ -164,7 +164,7 @@
     padding-bottom: 78px;
   }
 
-  .gym__img {
+  .gym__image-box img {
     max-height: 345px;
   }
 
@@ -240,7 +240,7 @@
     }
   }
 
-  .gym__img {
+  .gym__image-box img {
     height: 313px;
   }
 
