--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -66,47 +66,49 @@
 
 .header__content-box {
   display: flex;
-  max-width: 960px;
-  justify-content: space-between;
-  align-items: center;
-  flex-grow: 1;
 }
 
 .header__content {
-  position: relative;
   display: flex;
   flex-direction: column;
-  max-width: 396px;
-  text-align: right;
   align-items: flex-end;
-  padding-top: 75px;
-  margin-right: auto;
+  padding-top: 115px;
+  margin-right: 65px;
+}
 
-  &-list {
-    position: absolute;
-    top: 55.8%;
-    left: 20px;
-    list-style: none;
-    margin: 0;
-    padding: 0;
+.header__content-wrapper {
+  position: relative;
+  width: 395px;
+  text-align: right;
+  margin-bottom: 63px;
+}
+
+.header__content-list {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  padding-left: 21px;
+  padding-bottom: 20px;
+}
+
+.header__content-link {
+  @include font($font: $roboto, $size: 14px, $height: 21px);
+
+  text-decoration: none;
+  color: $white;
+
+  transition: color 0.3s 0.1s;
+
+  &:hover,
+  &:focus {
+    color: $red;
   }
 
-  &-link {
-    @include font($font: $roboto, $size: 14px, $height: 21px);
-
-    text-decoration: none;
-    color: $white;
-
-    transition: color 0.3s 0.1s;
-
-    &:hover,
-    &:focus {
-      color: $red;
-    }
-
-    &:active {
-      opacity: 0.8;
-    }
+  &:active {
+    opacity: 0.8;
   }
 }
 
@@ -125,7 +127,6 @@
   width: 400px;
   margin: 0;
   margin-bottom: 60px;
-  padding-left: 100px;
   letter-spacing: 0.03em;
   color: $white;
 }
@@ -160,6 +161,7 @@
 
 .header__image-box img {
   width: 100%;
+  object-fit: cover;
 }
 
 .header__social {
@@ -230,19 +232,23 @@
     line-height: 24px;
   }
 
-  .header__content {
-    max-width: 325px;
-    margin-right: 27px;
-    padding-top: 30px;
-
-    &-box {
-      width: 678px;
-    }
+  .header__content-list {
+    padding: 0 0 10px 1px;
   }
 
-  .header__content-list {
-    top: 47%;
-    left: 0;
+  .header__content-box {
+    justify-content: center;
+  }
+
+  .header__content {
+    margin-right: 30px;
+    max-width: 325px;
+    padding-top: 52px;
+  }
+
+  .header__content-wrapper {
+    width: 325px;
+    margin-bottom: 47px;
   }
 
   .header__city {
@@ -258,14 +264,15 @@
   }
 
   .header__image-box {
-    width: 324px;
+    width: 100%;
+    min-width: 324px;
     height: 390px;
   }
 
   .header__image-box img {
-    width: 324px;
+    width: 100%;
     height: 390px;
-  }
+    object-position: top;  }
 
   .header__btn {
     width: 183px;
@@ -283,18 +290,28 @@
   }
 
   .header__wrapper {
-    width: 320px;
     padding: 18px 15px;
   }
 
-  .header__inner {
-    width: 290px;
+  .header__content-box {
+    width: 100%;
   }
 
   .header__content {
-    width: 290px;
+    width: 100%;
+    max-width: 100%;
     margin-right: 0;
     padding-top: 53px;
+  }
+
+  .header__content-wrapper {
+    width: 290px;
+    align-self: center;
+  }
+
+  .header__content-list {
+    left: -2px;
+    padding-bottom: 7px;
   }
 
   .header__bar-logo,
@@ -313,10 +330,6 @@
     font-size: 78px;
     line-height: 78px;
     margin-bottom: 47px;
-  }
-
-  .header__content-list {
-    top: 49.3%;
   }
 
   .header__btn {
