--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -134,6 +134,7 @@
 
 @media (max-width: $desktop-width) {
   .promo__wrapper {
+    max-width: 768px;
     padding: 101px 45px 96px;
     min-height: 292px;
   }
