--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -162,14 +162,19 @@
   }
 
   .contacts__wrapper {
-    padding-top: 67px;
-    max-width: 320px;
+    padding: 67px 15px 62px;
+    max-width: 100%;
     margin: 0 auto;
   }
 
   .contacts__content {
-    width: 290px;
+    width: 100%;
     padding-right: 0;
+  }
+
+  .contacts__inner {
+    flex-direction: column;
+    align-items: flex-start;
   }
 
   .contacts__title {
