--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -87,7 +87,7 @@
 @media (max-width: $tablet-width) {
   .footer__wrapper {
     position: relative;
-    width: 320px;
+    //width: 320px;
     padding: 50px 15px;
     flex-wrap: wrap;
     flex-direction: column;
