--- a/source/sass/blocks/gym.scss
+++ b/source/sass/blocks/gym.scss
@@ -217,7 +217,6 @@
   }
 
   .gym__content {
-    width: 320px;
     margin: 0 auto;
     margin-bottom: 25px;
     padding: 0 15px;
@@ -225,24 +224,29 @@
   }
 
   .gym__content h2 {
+    width: 290px;
     font-size: 32px;
     line-height: 32px;
     margin-bottom: 8px;
   }
 
   .gym__content > p {
+    width: 290px;
     margin-bottom: 24px;
   }
 
+  .gym__text-box {
+    padding-right: 30px;
+  }
+
   .gym__text-box > p {
-    width: 260px;
+    width: 100%;
     text-align: left;
   }
 
   .gym__image-box {
     display: flex;
     flex-direction: column;
-    width: 320px;
     padding-bottom: 0;
     margin: 0 auto;
 
@@ -254,6 +258,7 @@
 
   .gym__image-box img {
     height: 313px;
+    object-fit: cover;
   }
 
   .gym__video-box {
