--- a/source/sass/blocks/subscription.scss
+++ b/source/sass/blocks/subscription.scss
@@ -26,7 +26,7 @@
   @include container();
   min-height: inherit;
   position: relative;
-  padding: 116px 20px 120px;
+  padding: 116px 20px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
