--- a/source/sass/blocks/subscription.scss
+++ b/source/sass/blocks/subscription.scss
@@ -80,8 +80,7 @@ input[type="radio"] {
 
 .subscription__list {
   position: relative;
-  width: 100%;
-  max-width: 1160px;
+  width: 1160px;
   display: flex;
   flex-wrap: wrap;
   list-style: none;
