--- a/source/sass/blocks/gym.scss
+++ b/source/sass/blocks/gym.scss
@@ -64,10 +64,6 @@
   height: 228px;
   max-width: 364px;
 
-  & picture {
-    display: flex;
-  }
-
   & img {
     width: 100%;
     height: 100%;
@@ -249,11 +245,6 @@
     flex-direction: column;
     padding-bottom: 0;
     margin: 0 auto;
-
-    & > picture {
-      height: 313px;
-      margin-bottom: 40px;
-    }
   }
 
   .gym__image-box img {
@@ -265,6 +256,7 @@
     position: relative;
     max-width: 100%;
     width: 100%;
+    margin-top: 35px;
 
     &-content img {
       height: 167px;
