--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -12,6 +12,8 @@
   justify-content: center;
   width: 50%;
   max-width: 500px;
+  height: 100%;
+  min-height: 500px;
   background-color: $red;
 }
 
@@ -123,19 +125,19 @@
   }
 }
 
-.promo picture {
-  height: 500px;
-}
-
 .promo img {
   max-width: 660px;
-  height: 100%;
+  height: 500px;
 }
 
 @media (max-width: $desktop-width) {
   .promo__wrapper {
     max-width: 768px;
     padding: 101px 45px 96px;
+    min-height: 292px;
+  }
+
+  .promo__content {
     min-height: 292px;
   }
 
@@ -196,12 +198,9 @@
     line-height: 24px;
   }
 
-  .promo picture {
-    height: 292px;
-  }
-
   .promo img {
     max-width: 386px;
+    height: 292px;
   }
 
   .promo__btn {
@@ -245,10 +244,6 @@
 
   .promo__date-month {
     margin-bottom: 1px;
-  }
-
-  .promo picture {
-    height: 292px;
   }
 
   .promo img {
